--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
   --border-color: #eeeeee;
   --line-color: #ececec;
   --cursor-color: #000000;
+  --transition-time: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 html {
@@ -131,7 +132,10 @@ header {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
+
+  transition: color var(--transition-time)
 }
+
 
 .navigation .nav-link:hover,
 .navigation .nav-link:focus {
@@ -156,6 +160,8 @@ header {
   text-decoration: none;
   padding-top: 32px;
   padding-bottom: 32px;
+
+  transition: color var(--transition-time);
 }
 
 .head-contacts .contact-link:hover,
@@ -217,6 +223,13 @@ header {
   border-radius: 4px;
   padding: 10px 32px;
   min-width: 216px;
+  transition: color var(--transition-time), 
+  background-color var(--transition-time);
+  
+  
+  /* transition-property: color, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .hero-btn:hover,
@@ -403,6 +416,9 @@ header {
   align-items: center;
   justify-content: center;
   color: #afb1b8;
+
+  transition: color var(--transition-time), 
+  background-color var(--transition-time);
 }
 
 .team-soc-ikon {
@@ -457,6 +473,9 @@ header {
   color: #afb1b8;
   border: 1px solid #afb1b8;
   border-radius: 4px;
+
+  transition: color var(--transition-time), 
+  border-color var(--transition-time);
 }
 
 .partner-icon {
@@ -512,6 +531,8 @@ header {
   text-decoration: none;
   font-style: normal;
   display: inline-block;
+
+  transition: color var(--transition-time);
 }
 
 .addres-list:not(:last-child) {
@@ -529,6 +550,8 @@ header {
   font-style: normal;
   text-decoration: none;
   display: inline-block;
+
+  transition: color var(--transition-time);
 }
 
 .footer-link:hover,
@@ -565,6 +588,8 @@ header {
   align-items: center;
   justify-content: center;
   color: var(--primaci-bg-color);
+
+   transition: background-color var(--transition-time);
 }
 
 .footer-soc-icon {
@@ -600,6 +625,10 @@ header {
   cursor: pointer;
   letter-spacing: 0.03em;
   padding: 6px 22px;
+  
+  transition: background-color var(--transition-time), 
+  color var(--transition-time),
+  box-shadow var(--transition-time);
 }
 
 .filter-btn:hover,
@@ -625,6 +654,7 @@ header {
   text-decoration: none;
   color: var(--primary-text-color);
   display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .gallery-link:hover,
@@ -657,7 +687,7 @@ header {
   position: absolute;
   display: none;
   left: 0;
-  top: 0;
+  top: 70%;
   width: 100%;
   font-size: 18px;
   line-height: 1.56;
