--- a/css/styles.css
+++ b/css/styles.css
@@ -98,9 +98,6 @@ button {
 
 header {
   border-bottom: 1px solid #ececec;
-  max-width: 1600px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .logo-style {
@@ -319,7 +316,6 @@ header {
   padding: 0;
 }
 
-
 /* Міркування */
 .mind-page {
   padding-top: 94px;
@@ -404,33 +400,27 @@ header {
 }
 
 .work-text-box {
-  position: absolute;
-  bottom: 0;
-  width: 370px;
-  height: 70px;
 }
 
 .work-sub-text {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
   text-transform: uppercase;
-  text-align: center;
-  padding-top: 27px;
-  padding-bottom: 27px;
   background-color: rgba(47, 48, 58, 0.8);
   color: var(--primaci-bg-color);
   font-weight: 700;
-  font-size: 14px;
   line-height: 1.14;
-  text-align: center;
-  letter-spacing: 0.03em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Наша команда */
 .team {
   background-color: var(--bgc-btn);
   padding: 94px 0;
-  max-width: 1600px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .work-title {
@@ -575,9 +565,6 @@ header {
 .footer {
   background-color: var(--bg-footer-color);
   padding: 60px 0;
-  max-width: 1600px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .footer-contacts {
@@ -724,7 +711,6 @@ header {
 }
 
 .projects-card {
-  outline: 1px solid #eeeeee;
   width: calc((100% - 60px) / 3);
 }
 
@@ -743,6 +729,7 @@ header {
 
 .project-text {
   padding: 20px 24px;
+  border: 1px solid var(--border-color);
 }
 
 .project-title {
